--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo-status-bar": "~1.11.1",
     "firebase": "10.7.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.6",
     "react-native-dotenv": "^3.4.9",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
