--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "dotenv": "^16.4.5",
-    "expo": "~50.0.4",
+    "expo": "^51.0.32",
     "expo-status-bar": "~1.11.1",
     "firebase": "10.7.1",
     "react": "18.2.0",
