--- a/package.json
+++ b/package.json
@@ -9,25 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "dotenv": "^16.4.5",
     "expo": "^51.0.32",
+    "expo-font": "~12.0.10",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.11.1",
     "firebase": "10.7.1",
     "react": "18.2.0",
     "react-native": "^0.73.6",
     "react-native-dotenv": "^3.4.9",
-    "react-native-reanimated": "^3.6.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.5",
+    "typescript": "^5.6.2"
   },
   "private": true
 }
