--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/react": "~18.2.79",
     "dotenv": "^16.4.5",
     "expo": "^51.0.32",
     "expo-font": "~12.0.10",
@@ -26,10 +27,11 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-native-svg-transformer": "^1.3.0"
+    "react-native-svg-transformer": "^1.3.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
