--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "10.7.1",
     "react": "18.2.0",
     "react-native": "^0.73.6",
+    "react-native-calendars": "^1.1306.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
